propellor (4.3.4) UNRELEASED; urgency=medium

  * LightDM.autoLogin: Use [Seat:*] rather than the old [SeatDefaults].
    The new name has been supported since lightdm 1.15.

 -- Joey Hess <id@joeyh.name>  Thu, 13 Jul 2017 15:52:24 -0400

propellor (4.3.3) unstable; urgency=medium

  * Hosts can be configured to build propellor using stack, by adding
    a property:
        & bootstrapWith (Robustly Stack)
  * Hosts can be configured to build propellor using cabal, but using
    only packages installed from the operating system. This
    will work on eg Debian:
        & bootstrapWith OSOnly
  * Iproved fix for bug that sometimes made --spin fail with
    "fatal: Couldn't find remote ref HEAD". The previous fix didn't work
    reliably.
  * User: add systemGroup and use it for systemAccountFor'
    Thanks, Félix Sipma. 
  * Export a Restic.backup' property.
    Thanks, Félix Sipma. 
  * Updated stack config to lts-8.22.

 -- Joey Hess <id@joeyh.name>  Thu, 13 Jul 2017 12:34:09 -0400

propellor (4.3.2) unstable; urgency=medium

  * Really include Propellor.Property.FreeDesktop.

 -- Joey Hess <id@joeyh.name>  Thu, 06 Jul 2017 17:28:53 -0400

propellor (4.3.1) unstable; urgency=medium

  * Added Propellor.Property.FreeDesktop module.
  * Added reservedSpacePercentage to the PartSpec EDSL.

 -- Joey Hess <id@joeyh.name>  Thu, 06 Jul 2017 17:03:15 -0400

propellor (4.3.0) unstable; urgency=medium

  * DiskImage: Removed grubBooted; properties that used to need it as a
    parameter now look at Info about the bootloader that is installed in
    the chroot that the disk image is created from.
    (API change)

 -- Joey Hess <id@joeyh.name>  Wed, 05 Jul 2017 21:04:04 -0400

propellor (4.2.0) unstable; urgency=medium

  * DiskImage.grubBooted no longer takes a BIOS parameter,
    and no longer implicitly adds Grub.installed to the properties of
    the disk image. If you used DiskImage.grubBooted, you'll need to update