@@ -154,6 +154,7 @@ Library
     Propellor.Property.Unbound
     Propellor.Property.User
     Propellor.Property.Uwsgi
+    Propellor.Property.Versioned
     Propellor.Property.XFCE
     Propellor.Property.ZFS
     Propellor.Property.ZFS.Process
